// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Loader renders 1`] = `
<div
  className="Inline-sc-1rz1cju-0 kwswbg"
>
  <div
    className="OuterCircle-sc-1059clw-0 cBDWNI"
    role="progressbar"
    size="xsmall"
  >
    <span
      className="InnerCircle-sc-6khuip-0 gXweUk"
    />
  </div>
  <div
    className="OuterCircle-sc-1059clw-0 cBDWNI"
    role="progressbar"
    size="xsmall"
  >
    <span
      className="InnerCircle-sc-6khuip-0 bDJQuY"
      color="piccolo.100"
    />
  </div>
</div>
`;

exports[`Loader renders with different colours 1`] = `
<div
  className="Inline-sc-1rz1cju-0 kwswbg"
>
  <div
    className="OuterCircle-sc-1059clw-0 cBDWNI"
    role="progressbar"
    size="xsmall"
  >
    <span
      className="InnerCircle-sc-6khuip-0 cNJAgk"
      color="dodoria.100"
    />
  </div>
  <div
    className="OuterCircle-sc-1059clw-0 cBDWNI"
    role="progressbar"
    size="xsmall"
  >
    <span
      className="InnerCircle-sc-6khuip-0 oXOvE"
      color="trunks.100"
    />
  </div>
  <div
    className="OuterCircle-sc-1059clw-0 cBDWNI"
    role="progressbar"
    size="xsmall"
  >
    <span
      className="InnerCircle-sc-6khuip-0 kwdVjE"
      color="#663399"
    />
  </div>
</div>
`;

exports[`Loader renders with sizes 1`] = `
<div
  className="Inline-sc-1rz1cju-0 kwswbg"
>
  <div
    className="OuterCircle-sc-1059clw-0 cBDWNI"
    role="progressbar"
    size="xsmall"
  >
    <span
      className="InnerCircle-sc-6khuip-0 gXweUk"
    />
  </div>
  <div
    className="OuterCircle-sc-1059clw-0 kwvAxI"
    role="progressbar"
    size="small"
  >
    <span
      className="InnerCircle-sc-6khuip-0 gXweUk"
    />
  </div>
  <div
    className="OuterCircle-sc-1059clw-0 fDOafQ"
    role="progressbar"
    size="medium"
  >
    <span
      className="InnerCircle-sc-6khuip-0 gXweUk"
    />
  </div>
  <div
    className="OuterCircle-sc-1059clw-0 foKFxY"
    role="progressbar"
    size="large"
  >
    <span
      className="InnerCircle-sc-6khuip-0 gXweUk"
    />
  </div>
  <div
    className="OuterCircle-sc-1059clw-0 hwfNCU"
    role="progressbar"
    size="xlarge"
  >
    <span
      className="InnerCircle-sc-6khuip-0 gXweUk"
    />
  </div>
</div>
`;
